k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: todo-dev
---
apiVersion: v1
kind: Namespace
metadata:
  name: todo-prod
